# nopipe

./: .gitignore  Cargo.toml  Makefile  README.md  cluster.env.example
cluster/: .env.example  Cargo.toml  nopipe-cluster.service  polyclaw-cluster.service
cluster/src/: gauntlet.rs  keeper.rs  main.rs  mod.rs  nft_cache.rs  ofac.rs  relayer.rs  rpc_server.rs  security.rs  telegram.rs
context/: session-2026-03-01-nopipe.md  session-2026-03-01.md  session-2026-03-02-handoff.md
contracts/: .env.example  AUDIT.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: OperatorNFT.sol  SubscriptionKeeper.sol  SwapExecutor.sol
contracts/contracts/test/: MockERC20.sol  MockMaliciousERC20.sol  MockRouter.sol
contracts/scripts/: deploy-local.ts  deploy-sepolia.ts  deploy.ts
contracts/test/: OperatorNFT.test.ts  Security.test.ts  SubscriptionKeeperReentrancy.test.ts  SwapExecutor.test.ts
docs/: EXECUTION-POLICY.md  INFRA-PITCH.md  PRD.md  PRDs.md  PRE-LAUNCH-PRD.md  WHITEPAPER.md
scripts/: cluster.env.example  deploy-cluster.sh  smoke-test-gauntlet.sh  smoke-test.sh
site/: index.html  package-lock.json  package.json  wrangler.toml
site/public/: agent.json  robots.txt  sitemap.xml
site/src/: App.tsx  Genesis.tsx  index.css
skill/: SKILL.md
