[package]
name = "nopipe-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.31"
chrono = "0.4"
